Arquivos novos: Site XYZ

--- a/software.html
+++ b/software.html
@@ -25,23 +25,24 @@
 			<li><a href="localizacao.html">Localização</a></li>
 		</ol>
 </nav>
-<img src="fotos/home.png" alt="Página Inicial">
 
+<img src="fotos/software.png" alt="Página Inicial">
 </header>
 
-<article id="conteudo">
+<article id="conteudo-local">
+	<h1>Softwares</h1>
+	<p>Visite-nos e fique a vontade para conhecer nossas soluções a nível de software. Oferecemos Sistemas Operacionais, Anti-vírus, Pacote de aplicativos Office, Tecnologias Web, Jogos e muito mais.</p>
 
-	<nav class="lateral">
-		<ol>
-			<li><a href="index-sec.html#xyz" target="janela">A XYZ Informática</a></li>
-			<li><a href="index-sec.html#equipe" target="janela">Equipe de trabalho</a></li>
-			<li><a href="index-sec.html#fornecedores" target="janela">Principais Fornecedores</a></li>
-			<li><a href="index-sec.html#clientes" target="janela">Alguns de nossos clientes</a></li>
-		</ol>
-	</nav>
+	<ul class="album">	
+		<li class="foto1">Sistema Operacional Windows 11</li>
+		<li class="foto2">Sistema Operacional Linux</li>
+		<li class="foto3">Anti-vírus Kaspersky</li>
+		<li class="foto4">Pacote de Aplicativos Office</li>
+		<li class="foto5">Tecnologias de Desenvolvimento Web</li>
+		<li class="foto6">Jogo Counter Strike</li>
+	</ul>
 
-	<iframe src="index-sec.html" name="janela" class="posicao"></iframe>
-
+	
 </article>
 
 <footer id="rodape">
