--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header id="cabecalho">
 	<hgroup class="titulos">
-		<h1>Xyz informática / 2023</h1>
+		<h1>Xyz informática</h1>
 		<h2>A melhor qualidade e o menor preço do Brasil.</h2>
 	</hgroup>
 
